@@ -5,6 +5,8 @@ from 2.5.11 to 2.5.12
 - dar now aborts if a line exceeding 20479 bytes is met in a listing file
 - improved error message issued when a file listing (-[ or -] option) is
   missing for it provides the missing filename in the error message
+- improved error message issued when a line of a file listing exceeds
+  20479 characters for it display the start of that line
 
 from 2.5.10 to 2.5.11
 - minor feature: displays the archive header which is never ciphered and
